# rclone-replication-webui

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.fr.md  README.md  docker-compose.postgres.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  errors.rs  main.rs  state.rs
backend/src/entities/: mod.rs  notification_channel.rs  remote.rs  task.rs  task_run.rs
backend/src/migration/: m001_create_remotes.rs  m002_create_notification_channels.rs  m003_create_tasks.rs  m004_create_task_runs.rs  m005_add_stats_to_task_runs.rs  m006_add_notify_on_to_tasks.rs  m007_add_retry_to_tasks.rs  m008_add_skipped_status.rs  mod.rs
backend/src/models/: mod.rs  notification.rs  remote.rs  task.rs  task_run.rs
backend/src/routes/: events.rs  mod.rs  notifications.rs  progress.rs  remotes.rs  runs.rs  tasks.rs
backend/src/services/: apprise.rs  mod.rs  rclone.rs  scheduler.rs  task_executor.rs
backend/src/services/secrets/: aws.rs  azure.rs  doppler.rs  gcp.rs  infisical.rs  migration.rs  mod.rs  noop.rs  scaleway.rs  sensitive.rs  store.rs  vault.rs
backend/src/sse/: broadcaster.rs  global.rs  mod.rs
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: client.ts  notifications.ts  remotes.ts  runs.ts  tasks.ts
frontend/src/config/: remoteFieldSchemas.ts
frontend/src/hooks/: useGlobalEvents.ts  useNotifications.ts  useRemotes.ts  useTaskProgress.ts  (+2 more)
(+21 files in other folders)
